--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework==3.15.2
 factory-boy==3.3.0
 Faker==27.0.0
 pillow==11.0.0
+psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
 setuptools==72.1.0
 six==1.16.0
