--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 asgiref==3.8.1
+certifi==2024.8.30
+charset-normalizer==3.4.0
 Django==5.1
+django-cors-headers==4.6.0
 djangorestframework==3.15.2
 factory-boy==3.3.0
 Faker==27.0.0
+idna==3.10
 pillow==11.0.0
 psycopg2-binary==2.9.10
 python-dateutil==2.9.0.post0
+requests==2.32.3
 setuptools==72.1.0
 six==1.16.0
 sqlparse==0.5.1
 tzdata==2024.1
+urllib3==2.2.3
 wheel==0.43.0
