--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     build: .
     restart: unless-stopped
     volumes:
-      - ".:/app"
+      - "./:/usr/app/arte-nativo/"
     ports:
       - "${HTTP_PORT}:80"
     env_file:
